# unifs

./: Makefile  README.md  TODO.md  pyproject.toml
src/unifs/: config.py  file_system.py  util.py
src/unifs/cli/: conf.py  fs.py  impl.py  main.py
tests/: conftest.py  test_config.py  test_file_system.py  test_logging.py  test_tui.py  test_util.py
tests/cli/: test_conf.py  test_fs.py  test_impl.py  test_main.py
